# openstack-keystone

./: .jenkins.yaml  Dockerfile
cinder/: Dockerfile
customer-portal/: Dockerfile  alembic.ini  pyproject.toml
customer-portal/alembic/: env.py
customer-portal/alembic/versions/: 001_initial.py  002_add_customer_domain.py  003_updated_at_and_pricing.py  004_billing_jobs.py  005_add_conversion_factor.py  006_pricing_metadata.py  007_drop_conversion_factor.py
customer-portal/app/: audit.py  auth.py  billing_export.py  billing_runner.py  config.py  crypto.py  db.py  git_backend.py  k8s.py  main.py  models.py  schemas.py
customer-portal/app/routers/: admin.py  billing.py  projects.py
customer-portal/static/: app.js  index.html  style.css
glance/: Dockerfile
heat/: Dockerfile  oslo-secrets-wrapper.sh
keystone/: Dockerfile  apache2-oidc-wrapper.sh
neutron/: Dockerfile  ha.py  ha_router.py
nova/: Dockerfile
openstack-operator/crds/: openstackarchivepolicy_crd.yaml  openstackproject_crd.yaml
openstack-operator/kustomize/base/: kustomization.yaml  rbac.yaml
openstack-operator/src/: handlers.py  models.py  openstack_client.py
openstack-operator/src/handlers/: __init__.py  archive_policy.py  network.py
openstack-operator/src/resources/: archive_policy.py  project.py  provider_network.py  registry.py
placement/: Dockerfile
